--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,13 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <ul style="padding-left: 0em" class="suggestedRooms">
-                                        <li onclick="peopleNearMe()" style="padding-top: 1em;;cursor:pointer;background-color: #007A00">People Near Me <span class="glyphicon glyphicon-heart" aria-hidden="true"></span></li>
-                                        <li onclick="peopleNotSoNearMe()" style="padding-top: 1em;;cursor:pointer;background-color: #D83647">People Not So near ME <span class="glyphicon glyphicon-plane" aria-hidden="true"></span></li>
+                                        <li id="peopleNearMe" onclick="peopleNearMe()">People Near Me <span class="glyphicon glyphicon-heart" aria-hidden="true"></span></li>
+                                        <li id="peopleNotNear" onclick="peopleNotSoNearMe()" style="">People Not So near ME <span class="glyphicon glyphicon-plane" aria-hidden="true"></span></li>
                                     </ul>
                                 </div>
                                 <div class="col-md-4">
                                     <ul style="padding-left: 0em" class="suggestedRooms">
-                                        <li onclick="trustYourDestiny()" style="padding-top: 1em;;cursor: pointer;background-color: #19469D">Trust Your Destiny <span class="glyphicon glyphicon-globe" aria-hidden="true"></span></li>
+                                        <li id="trustDestiny" onclick="trustYourDestiny()" >Trust Your Destiny <span class="glyphicon glyphicon-globe" aria-hidden="true"></span></li>
                                     </ul>
                                 </div>
                                 <div class="col-md-4">
@@ -84,8 +84,6 @@
             </div>
 
             <div class="inner cover page-2">
-                <h3 class="cover-heading" style="color: wheat;">Features </h3>
-
                 <div class="row" style="margin-top: 40px">
                     <div class="col-sm-6 col-md-4">
                         <div style="background-color: #333;border: 1px solid #333;" class="thumbnail">
@@ -142,6 +140,7 @@
                             <div class="caption">
                                 <h3 style="color: azure">Coming Soon </h3>
                                 <p style="color: azure">She can do a lot, We'll soon add Video BroadCasting , Improve Intelligence of Jazmine , Add more playlist based on genre of music and many more. Please feel free to suggest us for any feature request. </p>
+                                <p style="color: azure">She'll be able to recognise real world objects including you and other living being, provide news updates, Analyse sentences. </p>
                             </div>
                         </div>
                     </div>
