--- a/public/index.html
+++ b/public/index.html
@@ -266,6 +266,18 @@
 </script>
 <script>
     app.initialize();
+    var $page1 = $(".page-1");
+    var $page2 = $(".page-2");
+    var $page3 = $(".page-3");
+    function onDeviceReady(){
+        document.addEventListener("backbutton", onBackKeyDown, false);
+    }
+    function onBackKeyDown(){
+        $page2.hide();
+        $page1.show();
+        $page3.hide();
+    }
+
     document.addEventListener('deviceready', function() {
             var FADE_TIME = 150; // ms
             var TYPING_TIMER_LENGTH = 400; // ms
