Back button handled

--- a/public/index.html
+++ b/public/index.html
@@ -269,29 +269,22 @@
     var $page1 = $(".page-1");
     var $page2 = $(".page-2");
     var $page3 = $(".page-3");
-
     function onDeviceReady(){
-        /*Back event handler for all pages navigation*/
-        $(document).bind ('pageshow', function (e, data) {
-            if ($('ul.nav.masthead-nav').find('.active a').text() == 'Home ') {
-                document.addEventListener("backbutton", function () {
-                    setTimeout( function() {navigator.app.exitApp();}, 100 );
-                }, true);
-            }
-            else{
-                document.addEventListener("backbutton", function () {
-                    setTimeout( function() {
-                        $page2.hide();
-                        $page1.show();
-                        $page3.hide();
-                    }, 100 );
-                }, true);
-            }
-        });
-
-
+        document.addEventListener("backbutton", onBackKeyDown, false);
     }
 
+    function onBackKeyDown(){
+        var pageName = $('ul.nav.masthead-nav').find('.active a').text();
+
+        if(pageName == "Home "){
+
+        }else{
+            $page2.hide();
+            $page1.show();
+            $page3.hide();
+        }
+
+    }
     document.addEventListener('deviceready', function() {
             var FADE_TIME = 150; // ms
             var TYPING_TIMER_LENGTH = 400; // ms
