--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!--<link rel="stylesheet" href="http://jazmine.co.in/style.css">-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-min.css">
 
 
 </head>
@@ -160,7 +160,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="jquery-1.10.2.min.js"></script>
-    <script src="api.js" type="text/javascript"></script>
+    <script src="api-min.js" type="text/javascript"></script>
     <script type="text/javascript">
 
 
@@ -227,12 +227,12 @@
 
     </script>
 <script src="bootstrap.min.js"></script>
-<script src="responsivevoice.js"></script>
+<script src="responsivevoice-min.js"></script>
 <!--<script src="http://localhost:3001/responsivevoice.js"></script>-->
 
-<script type="text/javascript" src="socket.io-1.0.3.js"></script>
+<script type="text/javascript" src="socket.io-1.0.3-min.js"></script>
 <!--<script src="main.js"></script>-->
-<script src="main.js"></script>
+<script src="main-min.js"></script>
 
 <script>//! annyang
     //! version : 1.6.0
