--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                         <input class="inputMessage" placeholder="Type here..."/>
                         <input class="myInput" id="myInput" hidden="true" />
                     </li>
-                    <iframe id="sc-widget" src="https://w.soundcloud.com/player/?url=http://api.soundcloud.com/users/107767142/favorites" width="100%" height="1" scrolling="no" frameborder="no"></iframe>
+                    <iframe id="sc-widget" src="http://w.soundcloud.com/player/?url=http://api.soundcloud.com/users/107767142/favorites" width="100%" height="1" scrolling="no" frameborder="no"></iframe>
                     </ul>
 
             </div>
@@ -262,7 +262,7 @@
         annyang.start({ autoRestart: true,continuous: true });
     }
 
-    app.initialize();
+    //app.initialize();
     var $page1 = $(".page-1");
     var $page2 = $(".page-2");
     var $page3 = $(".page-3");
